# tauri-msix

./: Cargo.toml  README.md
src/: config.rs  icons.rs  main.rs  manifest.rs  package.rs  packager.rs
templates/: appxmanifest.xml.tera
